fixed banner issue on mobile device

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -381,23 +381,20 @@
 	    padding: 10px 0 85px;
 	}
 
-	.btns {
-		height: 150px;
-		margin-left: 200px;
-	}
+	
 
 	.b1 {
-		margin-left: 630px;
+		margin-left: -40px;
 		margin-top: -30px;
 	}
 
 	.b2 {
-		margin-left: 80px;
+		margin-left: -40px;
 		margin-top: 40px;
 	}
 
 	.b3 {
-		margin-left: 80px;
+		margin-left: -40px;
 		margin-top: 40px;
 	}
 
