--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -586,16 +586,17 @@ ul {
 
 .btn1 {
   width: 190px;
-  margin-left: -500px;
-  height: 50px;
-  font-size: 28px;
-  background-color: transparent;
-  color: #fff;
   border: 2px solid #fff;
+  background-color: transparent;
+  color: white;
   border-radius: 5px;
-  display: inline-block;
-  overflow: hidden;
+  margin-left: 50px;
+  height: 50px;
+  padding: 0 35px;
   position: relative;
+  transition: all 0.5s ease;
+  font-size: 28px;
+  display: inline-block;
   transform: perspective(1px) translateZ(0);
 }
 
